--- a/Facultad/Facultad.Consola/Facultad.Consola.csproj
+++ b/Facultad/Facultad.Consola/Facultad.Consola.csproj
@@ -49,5 +49,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Libreria\Libreria.csproj">
+      <Project>{e883564d-a433-4755-998f-38c0ef06deef}</Project>
+      <Name>Libreria</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
