--- a/PracticaClientes/Negocio/Negocio.csproj
+++ b/PracticaClientes/Negocio/Negocio.csproj
@@ -44,6 +44,7 @@
     <Compile Include="AdmCliente.cs" />
     <Compile Include="AdmCuenta.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validaciones.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Datos\Datos.csproj">
