--- a/Facultad/Validaciones/Validaciones.csproj
+++ b/Facultad/Validaciones/Validaciones.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E883564D-A433-4755-998F-38C0EF06DEEF}</ProjectGuid>
+    <ProjectGuid>{9864A8A9-DFBD-4243-B422-937F499FD9D2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Libreria</RootNamespace>
-    <AssemblyName>Libreria</AssemblyName>
+    <RootNamespace>Validaciones</RootNamespace>
+    <AssemblyName>Validaciones</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,28 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Alumno.cs" />
-    <Compile Include="Exceptions\AlumnoExistenteException.cs" />
-    <Compile Include="Bedel.cs" />
-    <Compile Include="Directivo.cs" />
-    <Compile Include="Docente.cs" />
-    <Compile Include="Empleado.cs" />
-    <Compile Include="Exceptions\EmpleadoInexistenteException.cs" />
-    <Compile Include="Exceptions\EmpleadoExistenteException.cs" />
-    <Compile Include="Exceptions\TipoEmpleadoIncorrectoException.cs" />
-    <Compile Include="Facultad.cs" />
-    <Compile Include="Persona.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Salario.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="ClassDiagram2.cd" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Validaciones\Validaciones.csproj">
-      <Project>{9864a8a9-dfbd-4243-b422-937f499fd9d2}</Project>
-      <Name>Validaciones</Name>
-    </ProjectReference>
+    <Compile Include="Validaciones.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
